<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="#03A9F4">


    <LinearLayout
        android:layout_width="550dp"
        android:layout_height="400dp"
        android:paddingTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner_background"
        android:elevation="10dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        >
    <TextView
        android:text="Register"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/Email"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="500dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="130dp"
        android:background="#420F0F" />

<!--    <TextView-->
<!--        android:id="@+id/loginnow"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/click_to_login"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold" />-->

    </LinearLayout>

</RelativeLayout>